--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.1.0",
     "openai": "^4.27.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^20",
